syntax = "proto3";

option go_package = "/types";

import "common.proto";

service Queue {
	rpc Queue (QueueRequest) returns (Void) {}
  rpc Dequeue (DequeueRequest) returns (DequeueReply) {}
}

// Idea: add loadtype, and it will processed by any queue that supports that loadtype.
message QueueRequest {
  string tenant=1;
  string queue = 2;
  repeated QueueItem items = 3;
}

message DequeueRequest {
  string tenant=1;
  string queue = 2;
  repeated QueueItem items = 3;
}

message DequeueReply {
  repeated QueueItem items = 1;
}

message QueueItem {
  string event=1;
  bytes data = 2;
} 